[project]
name = "amdari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "awscli>=1.44.20",
    "boto3>=1.42.30",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "load-dotenv>=0.1.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]
